# mention-hq

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Caddyfile.example  LICENSE  README.md  Taskfile.yml  devbox.json  zensical.toml
backend/: README.md  Taskfile.yml  alembic.ini  dbg2_tmp.py  dbg_tmp.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0cc7f6f1d8e7_add_avatar_url_to_people_and_identities.py  193cd0d4b9c2_sync_log_counts_items_and_proposals_not_.py  1e06e9e03bd0_people_and_person_identities.py  240b33d89d11_add_next_action_to_tasks.py  3d3a0b20744a_initial_schema.py  3f0a56abd9e5_add_matched_at_to_items.py  409d676b0983_add_description_to_tasks.py  4b439facfecf_initial_schema.py  53d12daa5b25_add_archived_at_to_tasks.py  53f580e644d9_add_priority_to_tasks.py  8d4d780cccf4_sources_you_add_and_which_one_fetched_.py  9a33f12272f9_triage_rules_and_item_triage_reason.py  c00afde4c3f1_add_archived_at_to_buckets.py  f197bab7bdf2_initial_schema.py
backend/app/: cli.py  config.py  database.py  main.py  models.py  schemas.py  screenshots.py  seed.py
backend/app/engine/: __init__.py  base.py  keys.py  registry.py  similarity.py
backend/app/routers/: admin.py  buckets.py  catchup.py  items.py  people.py  sync.py  tasks.py  triage.py
backend/tests/: conftest.py  test_admin.py  test_ai.py  test_api.py  test_config.py  test_detect.py  test_engine.py  test_frontend_serving.py  test_grouping.py  test_links.py  test_people.py  test_people_api.py  test_secrets.py  test_seed.py  test_sources_local.py  test_sources_remote.py  test_sync.py
docs/: brain.md  index.md  (+4 more)
(+116 files in other folders)
