[project]
name = "hq-backend"
version = "0.1.0"
description = "Mention HQ — aggregates activity across Linear, Slack, GitHub and local files into topic buckets"
requires-python = "~=3.11.0"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0,<3",
  "aiosqlite>=0.20",
  "greenlet>=3.0.0",
  "alembic>=1.13,<2",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.4,<3",
  "structlog>=25.4,<26",
  "anthropic>=0.69",
  # Secrets go to the OS keychain; cryptography backs the encrypted-file fallback
  # for headless machines with no Secret Service.
  "keyring>=25.4",
  "cryptography>=43",
  "rapidfuzz>=3.14.5",
  "emoji>=2.12",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.22.0",
  "freezegun>=1.5.1",
  "ruff>=0.7",
  "faker>=40.32.0",
  "playwright>=1.61.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = ["app"]
artifacts = ["app/sources/*.yaml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q"
